<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/short_gap">

        <TextView
            android:id="@+id/invmtTitle"
            style="@style/content_title"
            android:text="" />

        <TextView
            android:id="@+id/invmtIdLbl"
            style="@style/content_heading"
            android:text="@string/uniq_invmt_id" />

        <TextView
            android:id="@+id/invmtId"
            style="@style/content_item"
            android:text="" />

        <TextView
            style="@style/content_heading"
            android:text="@string/cio_rating" />

        <TextView
            android:id="@+id/cioRating"
            style="@style/content_item"
            android:text="" />

        <TextView
            style="@style/content_heading"
            android:text="@string/num_projs" />

        <TextView
            android:id="@+id/numProjs"
            style="@style/content_item"
            android:text="" />

        <TextView
            style="@style/content_heading"
            android:text="@string/lc_cost" />

        <TextView
            android:id="@+id/invmtCost"
            style="@style/content_item"
            android:text="" />

        <TextView
            style="@style/content_heading"
            android:text="@string/contractors" />

        <TextView
            android:id="@+id/contractors"
            style="@style/content_item"
            android:text="" />

        <TextView
            style="@style/content_heading"
            android:text="@string/contract_types" />

        <TextView
            android:id="@+id/contractTypes"
            style="@style/content_item"
            android:text="" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/short_gap"
            android:layout_marginRight="@dimen/short_gap"
            android:layout_marginTop="@dimen/short_gap"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/short_gap"
            android:layout_marginRight="@dimen/short_gap"
            android:layout_marginTop="@dimen/short_gap"
            android:text="" />

    </LinearLayout>
</ScrollView>
